# maw-js

./: 2026-03-15_ARCHITECTURE.md  2026-03-15_CODE-SNIPPETS.md  2026-03-15_DATA-FLOW.md  2026-03-15_FRONTEND.md  2026-03-15_QUICK-REFERENCE.md  README.md  asks.json  ecosystem.config.cjs  maw-js  maw-js.md  office.wasm  package.json  white.local+3-key.pem  white.local+3.pem
.claude/: settings.json
.claude/hooks/: check-file-size.sh
.github/workflows/: inbox-auto-add.yml.disabled
dist-8bit-office/: hub.html  index.html  office-8bit.js
dist-cf/: index.html
dist-cf/assets/: XTerminal-PemgCqeq.js  index-BUCcyZ-l.css  index-Lgg7tylF.js
dist-race-track/: index.html  race-track.js
dist-superman/: index.html  superman.js
dist-war-room/: bridge.js  canvas-bridge.js  index.html  war-room.js
dist-wasm-office/: bridge.html  index.html  oracle-office.wasm
dist-wasm-office/lib/: ansi.js  data-loop.js  popup.js
office/: vite.config.ts
office-8bit/: Cargo.toml  build.sh
office-8bit/src/: agents.rs  bridge.rs  camera.rs  colors.rs  main.rs  player.rs  tilemap.rs
office-8bit/web/: bridge.js  index.html
office/src/: App.tsx  index.css
scripts/: build-vm.sh  gen-avatars.ts  pack-office.ts
src/: cli.ts  config.ts  engine.capture.ts  engine.status.ts  engine.ts  feed-tail.ts  fleet.ts  oracle.ts  overview.ts  paths.ts  pty.ts  server.ts  ssh.ts  sweeper.ts  tmux.ts  ui.html  wake.ts  worktrees.ts
src/commands/: comm.ts  completions.ts  done.ts  fleet-init.ts  fleet.ts  (+3 more)
test/: tmux.test.ts
wasm-office/: Cargo.toml
wasm-vm/: Cargo.toml
wasm-vm/src/: lib.rs
(+24 files in other folders)
