[package]
name = "office-vm"
version = "0.1.0"
edition = "2021"
description = "WASM VM engine for Oracle Office — state, logic, data. HTML renders."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
